# voxtype

./: .dockerignore  .gitignore  BRIEF.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.aarch64-cpu  Dockerfile.aarch64-onnx  Dockerfile.avx512  Dockerfile.build  Dockerfile.onnx  Dockerfile.onnx-avx512  Dockerfile.onnx-cuda  Dockerfile.onnx-cuda-12  Dockerfile.onnx-cuda-13  Dockerfile.onnx-export  Dockerfile.onnx-migraphx  Dockerfile.onnx-rocm  Dockerfile.parakeet  Dockerfile.parakeet-cuda  Dockerfile.vulkan  FINDINGS.md  LICENSE  PLAN-fix-media-resume.md  PLAN-streaming-output.md  README.md  RELEASE_NOTES_v0.7.2.md  SECURITY.md  STATUS.md  THIRD_PARTY.md  TODO.md  build.rs  docker-compose.build.yml  flake.nix  nfpm.yaml  voxtype-0.1.0-1.fc39.x86_64.rpm  voxtype_0.1.0-1_amd64.deb
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-linux.yml  build-macos.yml  build-nix.yml  ci.yml  deploy-pages.yml  test-packages.yml
config/: default.toml
contrib/: nemotron-streaming-test-config.toml
contrib/hammerspoon/: README.md  voxtype.lua
contrib/manjaro-sway/: README.md
docs/: CI-SETUP.md  CONFIGURATION.md  FAQ.md  INSTALL.md  INSTALL_MACOS.md  MACOS_ARCHITECTURE.md  MACOS_TROUBLESHOOTING.md  MEETING_MODE.md  MODEL_SELECTION_GUIDE.md  MOONSHINE.md  PARAKEET.md  REFACTORING.md  SMOKE_TESTS.md  SONIOX.md  TROUBLESHOOTING.md  USER_MANUAL.md  WAYBAR.md
docs/.vitepress/: config.mjs
docs/investigations/: quickshell-engine-picker.md
docs/smoke_tests/: audio-feedback.md  basic-verification.md  cli-overrides.md  compositor-hooks.md  config-validation.md  delay-options.md  dotool-fallback.md  dotool-keyboard-layout.md  eager-processing.md  engine-switching-via-model-selection.md  file-output.md  gpu-backend-switching.md  gpu-isolation-mode.md  invalid-model-rejection.md  long-recording.md  meeting-mode.md  model-switching.md  multi-engine-transcription.md  multi-gpu-selection.md  multilingual-model-verification.md  on-demand-model-loading.md  output-chain-verification.md  output-drivers.md  parakeet-backend-switching.md  parakeet-with-preloaded-model.md  post-processing-command.md  quick-smoke-test-script.md  rapid-successive-recordings.md  recording-cycle.md  recording-queue.md  remote-transcription.md  service-restart-cycle.md  signal-handling.md  single-instance-enforcement.md  smart-auto-submit.md  transcribe-command-file-input.md  voice-activity-detection.md  waybar-json-output.md  whisper-cli-backend.md  x11-session-clipboard-xclip-xsel.md  (+1 more)
examples/: gemini-cleanup.sh  ollama-cleanup.sh  openai-cleanup.sh
examples/osd-recipes/: README.md  showcase-bars.toml  showcase-orbit.toml  showcase-prism-scope.toml  showcase-signal-stack.toml
macos/: README.md  RELEASE_PLAN.md
macos/VoxtypeMenubar/: Package.swift  build-app.sh
macos/VoxtypeSetup/: Package.swift  build-app.sh
nix/: home-manager-module.nix  nixos-module.nix  parakeet-models.nix  whisper-models.nix
packaging/: voxtype-configure.desktop
packaging/appimage/: AppRun  voxtype-onnx-wrapper.sh  voxtype.desktop
packaging/arch/: .SRCINFO  PKGBUILD  PKGBUILD-local  voxtype.install
packaging/arch-bin/: .SRCINFO  PKGBUILD  voxtype-bin.install
packaging/arch-bin-rc/: .SRCINFO  PKGBUILD  voxtype-bin-rc.install
packaging/debian/: changelog  control  rules  voxtype.postinst  voxtype.service
packaging/homebrew/: voxtype-cask.rb  voxtype.rb
packaging/omarchy/: README.md  migration.sh  omarchy-install-voxtype  voxtype-indicator.sh  voxtype-tui.hypr  voxtype-waybar.css  waybar-module.jsonc  waybar-style.css
packaging/rpm/: voxtype.spec
packaging/scripts/: postinstall.sh  voxtype-configure-launcher
packaging/systemd/: voxtype.service
quickshell/: EnginePicker.qml  MeetingControls.qml  OsdSurface.qml  README.md  shell.qml
quickshell/voxtype-osd/: README.md  shell.qml
quickshell/voxtype-shared/: AudioBridge.qml  README.md  RecipeRenderer.qml  StateReader.qml  StyleLoader.qml  Theme.qml  qmldir
scripts/: build-appimage.sh  build-docker-vulkan.sh  build-docker.sh  build-macos-dmg.sh  build-macos.sh  build-packages.sh  ci-build.sh  export-parakeet-models.sh  export-parakeet-onnx.py  install-arch.sh  install-openvino-omarchy  mirror-models-to-r2.sh  notarize-macos.sh  package.sh  remote-chat-smoketest.sh  sign-macos.sh  validate-release.sh  voxtype-wrapper.sh
src/: cli.rs  config.rs  config_set.rs  cpu.rs  daemon.rs  daemon_status.rs  eager.rs  error.rs  hotkey_macos.rs  lib.rs  license.rs  main.rs  menubar.rs  model_manager.rs  notification.rs  recording_queue.rs  service.rs  state.rs  status_json.rs  tray.rs
src/app/: config_set_engine.rs  config_show.rs  daemon_pid.rs  dispatch.rs  info.rs  macos.rs  meeting.rs  mod.rs  overrides.rs  record.rs  sigpipe.rs  status.rs  transcribe_file.rs  updates.rs
src/audio/: cpal_capture.rs  dual_capture.rs  enhance.rs  feedback.rs  levels.rs  media.rs  mod.rs  preprocess.rs
src/cli/: commands.rs  config.rs  info.rs  meeting.rs  mod.rs  record.rs  root.rs  setup.rs
src/config/: audio.rs  default_config.rs  hotkey.rs  language.rs  load.rs  meeting.rs  mod.rs  notification.rs  output.rs  parse.rs  profile.rs  recording.rs  root.rs  status.rs  text.rs  vad.rs  whisper.rs
src/corpus/: mod.rs
src/hotkey/: evdev_listener.rs  iohid.rs  macos.rs  mod.rs
src/meeting/: chunk.rs  data.rs  mod.rs  state.rs  storage.rs
src/osd/: config.rs  ipc.rs  mod.rs  style.rs  supervisor.rs  theme.rs  visual.rs
src/output/: anthropic.rs  cgevent.rs  clipboard.rs  dotool.rs  eitype.rs  mod.rs  modifier_guard.rs  osascript.rs  paste.rs  pbcopy.rs  post_process.rs  session.rs  streaming.rs  wtype.rs  xclip.rs  ydotool.rs
src/setup/: app_bundle.rs  binary.rs  compositor.rs  dms.rs  gpu.rs  hammerspoon.rs  icons.rs  launchd.rs  macos.rs  manifest.rs  mod.rs  model.rs  npu.rs  parakeet.rs  quickshell.rs  systemd.rs  vad.rs  variant_check.rs  waybar.rs
testing/: Dockerfile.parakeet-test
tests/: vad_integration.rs
website/: appcast.xml  demo.html  index.html
(+139 files in other folders)
