[workspace]
members = ["xtask"]

[package]
name = "voxtype"
version = "0.4.16"
edition = "2021"
authors = ["Peter Jackson", "Jean-Paul van Tillo", "Máté Rémiás", "Rob Zolkos", "Dan Heuckeroth", "Igor Warzocha", "Julian Kaiser", "Kevin Miller", "konnsim", "reisset", "Zubair"]
description = "Push-to-talk voice-to-text for Wayland"
license = "MIT"
readme = "README.md"
keywords = ["voice", "speech", "whisper", "wayland", "linux"]
categories = ["multimedia::audio", "accessibility"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal", "sync", "time", "process", "io-util"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Text processing
regex = "1"

# Async traits
async-trait = "0.1"

# Cross-platform utilities
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }  # Unix signals for IPC

# Audio capture
cpal = "0.15"
hound = "3"  # WAV file reading/writing

# HTTP client for remote transcription
ureq = { version = "2", features = ["json"] }

# Audio playback (for feedback sounds)
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# Whisper speech-to-text
whisper-rs = "0.15.1"


# CPU count for thread detection
num_cpus = "1.16"

# File watching for status --follow
notify = "6"

# Single instance check
pidlock = "0.1"

[features]
default = []
gpu-vulkan = ["whisper-rs/vulkan"]
gpu-cuda = ["whisper-rs/cuda"]
gpu-metal = ["whisper-rs/metal"]
gpu-hipblas = ["whisper-rs/hipblas"]

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
inotify = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1  # Faster dev builds, whisper still usable

[[bin]]
name = "voxtype"
path = "src/main.rs"
