[workspace]
members = ["xtask"]

[package]
name = "voxtype"
version = "0.7.2"
edition = "2021"
authors = ["Peter Jackson", "Jean-Paul van Tillo", "Máté Rémiás", "Rob Zolkos", "Dan Heuckeroth", "Igor Warzocha", "Julian Kaiser", "Kevin Miller", "konnsim", "reisset", "Zubair", "Loki Coyote", "Umesh", "Barrett Ruth", "André Silva", "Chmouel Boudjnah", "Christopher Albert", "Phuoc Thinh Vu", "Alexander Bosu-Kellett", "ayoahha", "Toizi", "kakapt", "Rinor Maloku", "Sami Jawhar", "jan Lemata", "Kai Stark", "graysky"]
description = "Push-to-talk voice-to-text for Wayland"
license = "MIT"
readme = "README.md"
keywords = ["voice", "speech", "whisper", "wayland", "linux"]
categories = ["multimedia::audio", "accessibility"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal", "sync", "time", "process", "io-util"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Text processing
regex = "1"

# Async traits
async-trait = "0.1"

# Common dependencies
libc = "0.2"

# Audio capture
cpal = "0.15"
hound = "3"  # WAV file reading/writing

# HTTP client for remote transcription
ureq = { version = "2", features = ["json"] }

# JSON parsing (for CLI backend)
serde_json = "1"

# Version comparison for update checking
semver = "1"

# CLI path resolution (for CLI backend)
which = "7"

# Temp files (for CLI backend audio)
tempfile = "3"

# Audio playback (for feedback sounds)
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# Whisper speech-to-text
whisper-rs = "0.16.0"

# Parakeet speech-to-text (optional, ONNX-based)
parakeet-rs = { version = "0.3.5", optional = true }

# ONNX-based ASR engines (Moonshine, SenseVoice, Paraformer, Dolphin, Omnilingual)
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "api-24", "half"] }
ndarray = { version = "0.16", optional = true }
half = { version = "2", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
rustfft = { version = "6", optional = true }

# CPU count for thread detection
num_cpus = "1.16"

# File watching for status --follow
notify = "6"

# Single instance check
pidlock = "0.1"

# TUI for `voxtype configure`
ratatui = "0.29"
crossterm = "0.28"
toml_edit = "0.22"

# Meeting mode (Pro feature)
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# OSD native frontend (SCTK + wgpu + egui-wgpu). All optional, gated by the
# `osd-native` feature so users not opting in don't pay the build cost.
smithay-client-toolkit = { version = "0.20", optional = true }
calloop = { version = "0.14", optional = true }
calloop-wayland-source = { version = "0.4", optional = true }
wayland-client = { version = "0.31", optional = true, features = ["system"] }
wayland-backend = { version = "0.3", optional = true, features = ["client_system"] }
wayland-protocols = { version = "0.32", optional = true, features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", optional = true, features = ["client"] }
wgpu = { version = "29", optional = true, default-features = false, features = ["vulkan", "gles", "wgsl", "std"] }
egui = { version = "0.34", optional = true }
egui-wgpu = { version = "0.34", optional = true, default-features = false }
raw-window-handle = { version = "0.6", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true }

# OSD GTK4 frontend (gated on `osd-gtk4` feature; dyn-links system GTK4).
gtk4 = { version = "0.11", optional = true }
gtk4-layer-shell = { version = "0.8", optional = true }
cairo-rs = { version = "0.22", optional = true }
glib = { version = "0.22", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
tao = "0.32"
core-graphics = "0.24"
core-foundation = "0.10"
dirs = "5"
mac-notification-sys = "0.6"  # Native macOS notifications
# Global hotkey + menubar icon. Both are macOS-only:
#   rdev is consumed by src/hotkey_macos.rs
#   tray-icon is consumed by src/menubar.rs
# Declaring them at the top level pulled in libappindicator → GTK3 system
# dev deps (glib-sys, gdk-pixbuf-sys, atk-sys, …) on every Linux build,
# breaking NixOS source builds that didn't list those in the derivation
# (Issue #352). Linux daemon doesn't use either, so they live here.
rdev = "0.5.3"
tray-icon = "0.21.3"

[target.'cfg(target_os = "linux")'.dependencies]
# Input handling (evdev for kernel-level key events)
evdev = "0.12"
inotify = "0.10"  # Watch /dev/input for device hotplug
nix = { version = "0.29", features = ["signal", "process"] }  # Unix signals for IPC

[features]
default = []
# OSD frontends. Each binary is gated on its own feature so users can
# build only the rendering stack they need. Real GUI deps land in
# Commits 4a/4b; the lists below grow then.
osd-native = [
    "dep:smithay-client-toolkit",
    "dep:calloop",
    "dep:calloop-wayland-source",
    "dep:wayland-client",
    "dep:wayland-backend",
    "dep:wayland-protocols",
    "dep:wayland-protocols-wlr",
    "dep:wgpu",
    "dep:egui",
    "dep:egui-wgpu",
    "dep:raw-window-handle",
    "dep:pollster",
    "dep:bytemuck",
]
osd-gtk4 = ["dep:gtk4", "dep:gtk4-layer-shell", "dep:cairo-rs", "dep:glib"]
gpu-vulkan = ["whisper-rs/vulkan"]
gpu-cuda = ["whisper-rs/cuda"]
gpu-metal = ["whisper-rs/metal"]
gpu-hipblas = ["whisper-rs/hipblas"]
# ML-based speaker diarization (uses ONNX for embedding extraction)
ml-diarization = ["dep:ort", "dep:ndarray"]
# Parakeet backend (ONNX-based, alternative to Whisper)
parakeet = ["dep:parakeet-rs"]
parakeet-cuda = ["parakeet", "parakeet-rs/cuda"]
parakeet-tensorrt = ["parakeet", "parakeet-rs/tensorrt"]
parakeet-migraphx = ["parakeet", "parakeet-rs/migraphx"]
parakeet-coreml = ["parakeet", "parakeet-rs/coreml"]
# Dynamic loading for system ONNX Runtime (used by Nix builds)
parakeet-load-dynamic = ["parakeet", "parakeet-rs/load-dynamic"]
# Shared ONNX dependencies for engines using fbank/CTC preprocessing
onnx-common = ["dep:ort", "dep:ndarray", "dep:rustfft"]
# Marker features that aggregate per-engine GPU EP flags. Each engine's
# session builder calls a shared helper (src/transcribe/onnx_ep.rs) that
# checks these markers to decide which EPs to register at runtime.
# Enabling any *-cuda feature pulls onnx-cuda-enabled in transitively;
# same for *-migraphx and *-tensorrt.
onnx-cuda-enabled = ["ort/cuda"]
onnx-migraphx-enabled = ["ort/migraphx"]
onnx-tensorrt-enabled = ["ort/tensorrt"]
# Moonshine backend (ONNX-based, encoder-decoder ASR).
# No migraphx feature — MIGraphX 7.2 can't compile Moonshine's
# encoder-decoder `If` op (different output shapes between branches).
# AMD users run Moonshine on CPU.
moonshine = ["onnx-common", "dep:tokenizers"]
moonshine-cuda = ["moonshine", "onnx-cuda-enabled"]
moonshine-tensorrt = ["moonshine", "onnx-tensorrt-enabled"]
# SenseVoice backend (ONNX-based, CTC encoder-only ASR).
# No migraphx feature — MIGraphX rejects the encoder's Where-op
# broadcast pattern (axis mismatch). AMD users run SenseVoice on CPU.
sensevoice = ["onnx-common"]
sensevoice-cuda = ["sensevoice", "onnx-cuda-enabled"]
sensevoice-tensorrt = ["sensevoice", "onnx-tensorrt-enabled"]
# Paraformer backend (FunASR ONNX-based CTC encoder).
# No migraphx feature — MIGraphX EP segfaults during model load.
# AMD users run Paraformer on CPU.
paraformer = ["onnx-common"]
paraformer-cuda = ["paraformer", "onnx-cuda-enabled"]
paraformer-tensorrt = ["paraformer", "onnx-tensorrt-enabled"]
# Dolphin backend (ONNX-based CTC encoder, dictation-optimized).
# No migraphx feature — MIGraphX rejects the encoder's Slice op shape.
# AMD users run Dolphin on CPU.
dolphin = ["onnx-common"]
dolphin-cuda = ["dolphin", "onnx-cuda-enabled"]
dolphin-tensorrt = ["dolphin", "onnx-tensorrt-enabled"]
# Omnilingual backend (FunASR ONNX-based, 50+ languages).
# No migraphx feature — graph compiles but produces garbled output and
# pays a 65s+ compile penalty per first inference. AMD users run on CPU.
omnilingual = ["onnx-common"]
omnilingual-cuda = ["omnilingual", "onnx-cuda-enabled"]
omnilingual-tensorrt = ["omnilingual", "onnx-tensorrt-enabled"]
# Cohere Transcribe backend (ONNX-based encoder-decoder, Whisper-style task tokens).
# Top of the Open ASR Leaderboard. Wired into CLI/config/factory; users opt in
# via `cargo build --features cohere` and the model files are downloaded into
# the standard models directory like other ONNX engines.
cohere = ["onnx-common", "dep:half", "dep:tokenizers"]
cohere-cuda = ["cohere", "onnx-cuda-enabled"]
cohere-tensorrt = ["cohere", "onnx-tensorrt-enabled"]
# No cohere-migraphx feature: MIGraphX 7.2 still fails on the
# onnx-community q4 export. Original blocker was MatMulNBits bits=8
# (cstr int8); q4 has bits=4 which is supported, but its zero_points
# tensor layout (`[hidden, blocks_per_row]`) doesn't match MIGraphX's
# expected flat `[hidden * blocks_per_row]` layout. Re-enable when
# MIGraphX upstream accepts the standard onnx-community q4 layout, or
# when we ship a re-quantized model that matches MIGraphX's expectation.
# Dynamic loading for system ONNX Runtime. Used by Nix builds and the
# AMD/MIGraphX binary, which pairs with the system `onnxruntime-rocm`
# package (no upstream pyke prebuilt ships the MIGraphX provider .so).
onnx-load-dynamic = ["ort/load-dynamic"]

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1  # Faster dev builds, whisper still usable

[[bin]]
name = "voxtype"
path = "src/main.rs"

[[bin]]
name = "voxtype-osd-native"
path = "src/bin/voxtype_osd_native/main.rs"
required-features = ["osd-native"]

[[bin]]
name = "voxtype-osd-gtk4"
path = "src/bin/voxtype_osd_gtk4.rs"
required-features = ["osd-gtk4"]

# Tiny launcher that picks between voxtype-osd-gtk4 and voxtype-osd-native
# at runtime based on config/env/CLI. Always built, no GUI deps; falls back
# to whichever frontend binary it finds on PATH if the preferred one isn't
# installed.
[[bin]]
name = "voxtype-osd"
path = "src/bin/voxtype_osd.rs"

[[example]]
name = "inspect_cohere_onnx"
required-features = ["cohere"]
